# Terris

./: .gitignore  .ignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  Terris  cmake_install.cmake  conanfile.txt  run.sh  setup.sh
assets/font/: info.txt
include/: Ball.hpp  block.hpp  blocks.hpp  colors.hpp  game.hpp  grid.hpp  position.hpp
src/: block.cpp  blocks.cpp  colors.cpp  game.cpp  grid.cpp  main.cpp  position.cpp
